// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Small button behaves correctly Outlined variant renders button with border state 1`] = `
<button
  class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-1gihuj7-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  Label
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`Small button behaves correctly matches snapshot for a text button 1`] = `
<button
  class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1numino-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  Label
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;
